<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.Editar_Departamento">

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fact"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/actualizar_departamento"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <TextView
            android:id="@+id/textView48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:fontFamily="@font/alatsi"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/departamento"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/id_depmodifc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/archivo"
            android:hint="@string/ingresar_departamento"
            android:inputType="textPersonName"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:textColorHint="#78909C"
            android:textSize="18sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fact"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/id_btnmoddepart"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:drawablePadding="10dp"
            android:fontFamily="@font/archivo"
            android:text="@string/btnmodificar"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>