<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.Editar_Ciudad">

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fact"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/archivo"
            android:gravity="center"
            android:text="@string/actualizar_ciudad"
            android:textColor="#FFFFFF"
            android:textColorHighlight="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout73"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19">

        <LinearLayout
            android:id="@+id/linearLayout18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:fontFamily="@font/alatsi"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/ciudad"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/id_mod_ciu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/archivo"
                android:hint="@string/ingresar_ciudad"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:fontFamily="@font/alatsi"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/departamento"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/id_spi_dep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:gravity="center"
                android:minHeight="48dp"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout73"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fact"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/id_iddepartamento_mod"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/id_departamento_mod"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/id_btnmodif_ciu"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btnmodificar"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>