<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.Editar_Clientes">

    <LinearLayout
        android:id="@+id/linearLayout49"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fact"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView41"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/modificar_cliente"
            android:textColor="#FFFFFF"
            android:textColorHighlight="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout49">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/raz_n_social"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/id_rz_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/r_u_c"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/id_ruc_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/direcci_n"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/id_dire_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/tel_fono_o_celular"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/id_telef_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:text="@string/ciudad"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <Spinner
                android:id="@+id/id_spinner_cl_mod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout56"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/fact"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView6">

        <Button
            android:id="@+id/id_btnMC"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_guardar"
            android:drawablePadding="10dp"
            android:text="@string/btnmodificar"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/id_txtidciudad"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/id_txtciudad_mod"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>